<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018, 2019 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                tools:text="Owner"
                android:textSize="20sp"
                android:id="@+id/dcp_ownerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                tools:text="Group"
                android:textSize="20sp"
                android:id="@+id/dcp_groupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/owner"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/dcp_ownerRead"
                    android:text="@string/read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_ownerWrite"
                    android:text="@string/write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_ownerExecute"
                    android:text="@string/execute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/group"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/dcp_groupRead"
                    android:text="@string/read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_groupWrite"
                    android:text="@string/write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_groupExecute"
                    android:text="@string/execute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/anyone"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:id="@+id/dcp_anyoneRead"
                    android:text="@string/read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_anyoneWrite"
                    android:text="@string/write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/dcp_anyoneExecute"
                    android:text="@string/execute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/dcp_done"
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle"/>

        <Button
                android:id="@+id/dcp_restore"
                android:text="@string/restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
